--- a/pom.xml
+++ b/pom.xml
@@ -17,19 +17,19 @@
         <dependency>
             <groupId>com.github.codemonstur</groupId>
             <artifactId>bobthebuildtool</artifactId>
-            <version>5</version>
+            <version>0</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
-            <version>6.5.0</version>
+            <version>7.14.0</version>
         </dependency>
         <dependency>
             <groupId>org.mariadb.jdbc</groupId>
             <artifactId>mariadb-java-client</artifactId>
-            <version>2.6.1</version>
+            <version>3.0.1-beta</version>
         </dependency>
 
     </dependencies>
